[project]
name = "ad_analysis"
version = "0.1.0"
description = "Ad analysis"
authors = [
    {name = "Nicolas Audheon",email = "audheon.nicolas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.29.0)",
    "pymongo (>=4.12.0)",
    "jupyterlab (>=4.3.6,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
